2015-01-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogupdate.sh: only writing staged files to the changelog
	now with the correct amount of empty lines

	* src/mountasuser.sh: convenience functions and additional error checking

	* src/randomstring.sh: printing a short random string, e.g. for (unsafe) passwords

	* src/scrollevince.sh: interactive script to scroll all open evince windows simultaneously. Still a bit buggy

	* githooks/pre-commit: auto-stage ChangeLog during commit

	* src/unstagedfiles.sh: print all unstaged, but tracked files for the direct subdirectories

	* src/pullall.sh: improved directory traversal
	easier dirname printing (as in 'easier on the eyes')

	* src/pushall.sh: pretty directory and remote texts

2014-11-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/watchscroll.sh: watch-like capabilities, but with scrolling

2014-11-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: execution duration information added
	--nomishaps option added to hide unused and duplicate citations

2014-11-18	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: removing COPYING

	* src/countcolorpages.sh: script which counts all colored pages in pdf files

	* src/screenshot.sh: exporting to png files

2014-11-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/keymap.sh: using german deadacute if available

2014-11-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: correctly handling bibtex updates
	tracking changes in .bst files (bibliography styles)

2014-10-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/transpose.sh: script to transpose rows and columns added

2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing multiply-defined labels

2014-10-02	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing undefined references and citations after compilation

2014-09-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: description text added
