@@ -1,3 +1,7 @@
+2015-02-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/kerbalpodcast-dl.sh: script for auto-downloading the latest kerbal podcast
+
 2015-01-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/changelogupdate.sh: only writing staged files to the changelog
